fix: og text balancing

--- a/application/src/data/posts/expo-router-repack.mdx
+++ b/application/src/data/posts/expo-router-repack.mdx
@@ -6,9 +6,9 @@ color: "#00FF9B"
 draft: false 
 ---
 
-Recently I migrated a React Native application to [@callstack/repack](https://re-pack.dev/). I wanted to take advantage of the performance and unique features that rspack had to offer, such as support for virtual modules and greater control over the bundle. However, I didn't want to abandon the benefits that expo brings to a React Native application, in my case the [CNG](https://docs.expo.dev/workflow/continuous-native-generation/) and [expo-router](https://docs.expo.dev/router/introduction/).
+Recently I migrated a React Native application to [@callstack/repack](https://re-pack.dev/). I wanted to take advantage of the performance and unique features that [Rspack](https://rspack.dev/) had to offer, such as support for virtual modules and greater control over the bundle. However, I didn't want to abandon the benefits that expo brings to a React Native application, in my case the [CNG](https://docs.expo.dev/workflow/continuous-native-generation/) and [expo-router](https://docs.expo.dev/router/introduction/).
 
-So I wrote this article to show how I integrated repack with expo and expo-router, ensuring that both development and production workflows work as expected.
+So I wrote this article to show how I integrated `@callstack/repack` with `expo` and `expo-router`, ensuring that both development and production workflows work as expected.
 
 ## Fixing the development workflow
 
