fix: remove draft and fix date in rust image processing post

--- a/posts/rust-image-processing/index.mdx
+++ b/posts/rust-image-processing/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: "Using Rust for intensive processing in JavaScript applications"
 description: ""
-date: "2025-03-12"
+date: "2025-04-02"
 color: "#E45928"
-draft: true
+draft: false
 ---
 
 JavaScript is a great language for various tasks, offering a rich ecosystem, excellent DX, and satisfactory performance for most applications. However, there are cases where we need superior performance, such as in image processing tasks, data manipulation, or intensive mathematical calculations. In these cases, we can turn to Rust, a programming language known for its safety and performance.
