fix: add missing description to last post

--- a/posts/rust-image-processing/index.mdx
+++ b/posts/rust-image-processing/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Using Rust for intensive processing in JavaScript applications"
-description: ""
+description: "Learn how to leverage Rust for high-performance image processing in JavaScript applications using NAPI-RS"
 date: "2025-04-02"
 color: "#E45928"
 draft: false
